feat: add cloud sync UI and firebase-admin dependency

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eventsource": "^4.1.0",
     "express": "^5.2.1",
     "firebase": "^12.9.0",
+    "firebase-admin": "^13.1.0",
     "lucide-react": "^0.574.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
